@@ -1,6 +1,7 @@
 HEAD
-	+ Remove samba and HA dependencies
 	+ Set version to 8.0
+	+ Add different ssl certs for every vhost
+	+ Remove samba and HA dependencies
 	+ Use of TryCatch instead of TryCatch::Lite
 	+ Add initial-setup script
 	+ Update enable-module
